--- a/src/sqlite.h.in
+++ b/src/sqlite.h.in
@@ -5877,6 +5877,7 @@ int sqlite3_create_window_function(
 #define SQLITE_DIRECTONLY       0x000080000
 #define SQLITE_SUBTYPE          0x000100000
 #define SQLITE_INNOCUOUS        0x000200000
+#define SQLITE_PLACEHOLDER      0x000400000
 #define SQLITE_RESULT_SUBTYPE   0x001000000
 #define SQLITE_SELFORDER1       0x002000000
 
