--- a/Makefile.in
+++ b/Makefile.in
@@ -109,6 +109,8 @@ CFLAGS.readline = @CFLAGS_READLINE@
 LDFLAGS.icu = @LDFLAGS_ICU@
 LDFLAGS.rt = @LDFLAGS_RT@
 CFLAGS.icu = @CFLAGS_ICU@
+LDFLAGS.pcre = @LDFLAGS_PCRE@
+CFLAGS.pcre = @CFLAGS_PCRE@
 LDFLAGS.libsqlite3.soname = @LDFLAGS_LIBSQLITE3_SONAME@
 # soname: see https://sqlite.org/src/forumpost/5a3b44f510df8ded
 LDFLAGS.libsqlite3.os-specific = \
